# test-task-qt-threading

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: numberconsumer.h  numberproducer.h  numberqueue.h  threadsdemowindow.h
src/: main.cpp  numberconsumer.cpp  numberproducer.cpp  numberqueue.cpp  threadsdemowindow.cpp  threadsdemowindow.ui
